# WinGUI

./: .gitignore  LICENSE  README.md  build.bat  example.py  pyproject.toml
asm/: wingui32.asm
wingui/: __init__.py  __main__.py  diag.py  wingui.py
