[build-system]
requires      = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata  (PEP 621)
# ---------------------------------------------------------------------------
[project]
name        = "WinGUI"
version     = "1.0.0"
description = "Native Win32 GUI for Python via a pure ctypes shim over NASM x86-64 Assembly"
readme      = { file = "README.md", content-type = "text/markdown" }
license     = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies    = []          # zero runtime dependencies — stdlib only

authors = [
    { name = "Divyanshu Sinha", email = "divyanshu.sinha631@gmail.com" },
]

keywords = [
    "windows", "win32", "gui", "native", "ctypes",
    "assembly", "nasm", "winapi", "desktop",
]

classifiers = [
    # Development status
    "Development Status :: 5 - Production/Stable",

    # Audience
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # License
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",

    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",

    # Platform
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",

    # Typing
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://github.com/DivyanshuSinha136/WinGUI"
Repository    = "https://github.com/DivyanshuSinha136/WinGUI"
"Bug Tracker" = "https://github.com/DivyanshuSinha136/WinGUI/issues"

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------
[project.scripts]
# Exposes `wingui` as a CLI command (delegates to __main__.py)
wingui = "wingui.__main__:main"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["wingui*"]

# Ship the pre-built DLL alongside the Python sources so a plain
# `pip install` works without a local NASM / GCC toolchain.
[tool.setuptools.package-data]
wingui = [
    "wingui32.dll",   # primary (v3.3+)
    "wingui2.dll",    # legacy fallback
    "py.typed",       # PEP 561 marker
]

# ---------------------------------------------------------------------------
# Optional / development dependencies
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "build>=1.2",        # PEP 517 frontend  (python -m build)
    "twine>=5.0",        # upload to PyPI    (twine upload dist/*)
    "ruff>=0.4",         # linter + formatter
    "mypy>=1.10",        # static type checker
    "pytest>=8.0",       # test runner
    "pytest-timeout",    # guard against hanging GUI tests
]

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 100
src            = ["wingui"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["wingui"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
strict                 = true
warn_return_any        = true
warn_unused_ignores    = true
disallow_untyped_defs  = true

# ctypes internals generate many unavoidable Any; silence them
[[tool.mypy.overrides]]
module                 = "ctypes.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
timeout      = 10          # seconds — prevents a hung Win32 loop from stalling CI
addopts      = "-v --tb=short"
filterwarnings = [
    "error",
]